--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>1</groupId>
-    <artifactId>1</artifactId>
+    <groupId>7group</groupId>
+    <artifactId>SeaPort</artifactId>
     <version>1.0</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.googlecode.blacken</groupId>
+            <artifactId>blacken-core</artifactId>
+            <version>1.1</version>
+        </dependency>
+    </dependencies>
 </project>
